<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Chandra Poerwanto
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!-- App -->
    <string name="app_name">TwistedOTA</string>
    <string name="app_title">Twisted Updates</string>

    <!-- Categories -->
    <string name="ota_category">OTA</string>
    <string name="links_category">Links</string>
	
	<!-- Insert download link for rom -->
	<string name="download_url">https://renderserver.net/browse?path=xwasabi-twisted/Twisted%20Angler/rc</string>
	
    <!-- ROM info -->
    <string name="latest_version">Latest version: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="system_uptodate">Your system is up to date</string>

    <!-- Check update -->
    <string name="check_update_title">Check update</string>
    <string name="last_check_summary">Last check: %1$s</string>
    <string name="last_check_never">Never</string>
    <string name="check_update_failed">Can\'t check update</string>
    <string name="no_update_available">No update available</string>

    <!-- Update interval -->
    <string name="interval_title">Automatic update interval</string>
    <string name="autoupdate_enabled">Automatic update is enabled</string>
    <string name="autoupdate_disabled">Automatic update is disabled</string>

    <!-- Notification -->
    <string name="notification_title">ROM Update</string>
    <string name="notification_message">New update available!</string>

    <!-- Dialog -->
    <string name="dialog_message">Checking for ROM updates, please wait…</string>

</resources>
