<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android"
android:title="@string/app_title">

<PreferenceScreen
android:selectable="false"
android:layout="@layout/preference_topspacer"
/>

<PreferenceCategory
android:icon="@drawable/ic_launcher_slimota"
android:layout="@layout/preference_header"
android:title="@string/ota_category">
<PreferenceScreen
android:selectable="false"
android:layout="@layout/preference_spacer"/>
<PreferenceScreen
android:icon="@drawable/twisted_ota_romupdate_icon"
android:layout="@layout/preference_header"
android:title="@string/notification_title"
android:key="key_rom_info"/>
<PreferenceScreen
android:layout="@layout/preference_header"
android:icon="@drawable/twisted_ota_checkupdates"
android:key="key_check_update"
android:title="@string/check_update_title"
></PreferenceScreen>
<ListPreference
android:layout="@layout/preference_header"
android:icon="@drawable/twisted_ota_update_icon"
android:key="key_update_interval"
android:title="@string/interval_title"
android:dialogTitle="@string/interval_title"
android:entries="@array/interval_entries"
android:entryValues="@array/interval_values">

</ListPreference>
</PreferenceCategory>

<PreferenceScreen
android:selectable="false"
android:layout="@layout/preference_spacer"/>
<PreferenceCategory
android:icon="@drawable/twisted_ota_links_icon"
android:layout="@layout/preference_header"
android:key="category_links"
android:title="@string/links_category">
</PreferenceCategory>

<PreferenceScreen
android:selectable="false"
android:layout="@layout/preference_spacer">
</PreferenceScreen>

</PreferenceScreen>